[fix] Improve performance of dnd by removing gap and using margin instead

--- a/src/components/File/File.css
+++ b/src/components/File/File.css
@@ -4,6 +4,8 @@
     color: white;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 8px;
+}
+
+.icon {
+    margin-right: 4px;
 }
