--- a/src/components/Folder/Folder.css
+++ b/src/components/Folder/Folder.css
@@ -4,5 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 8px;
+}
+
+.icon {
+    margin-right: 8px;
 }
