--- a/src/features/FileManager/FileManager.css
+++ b/src/features/FileManager/FileManager.css
@@ -1,4 +1,5 @@
 .empty-folder {
+    margin-left: 16px;
+    padding: 8px;
     color: white;
-    margin-left: 24px;
 }
